tests/ui/deprecation/invalid-literal.stderr
error: malformed `deprecated` attribute input
  --> $DIR/invalid-literal.rs:1:1
   |
LL | #[deprecated = b"test"]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[deprecated = b"test"]
LL + #[deprecated = "reason"]
   |
LL - #[deprecated = b"test"]
LL + #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
   |
LL - #[deprecated = b"test"]
LL + #[deprecated]
   |

error: aborting due to 1 previous error

