tests/ui/deprecation/invalid-literal.rs
#[deprecated = b"test"] //~ ERROR malformed `deprecated` attribute
fn foo() {}

fn main() {}
